--- a/Assignment_6_4/src/main/resources/fxml/notebook.fxml
+++ b/Assignment_6_4/src/main/resources/fxml/notebook.fxml
@@ -13,7 +13,7 @@
     <!-- Top Section: Title and Instructions -->
     <top>
         <VBox spacing="10" style="-fx-background-color: #2c3e50; -fx-padding: 20;">
-            <Label text="Notebook Application" textFill="white">
+            <Label text="Notebook application" textFill="white">
                 <font>
                     <Font name="Arial Bold" size="24.0"/>
                 </font>
